# grub2-theme-unexicon

./: .gitignore  LICENSE  Makefile.am  NEWS.in  README.in  autogen.sh  configure.template
grub/fonts/: dejavu_18.pf2  dejavu_22.pf2  dejavu_24.pf2  dejavu_bold_10.pf2  dejavu_bold_12.pf2  dejavu_bold_16.pf2  dejavu_bold_18.pf2  dejavu_bold_22.pf2  dejavu_bold_24.pf2  unicode2.pf2
grub/themes/os7live/: dejavu.pf2  theme.txt
grub/themes/unexicon/: theme.txt  theme1.txt  theme2.txt  theme3.txt  theme4.txt  theme5.txt  theme6.txt
